Change CSS of left sidebar to fix overflow

--- a/docs/_static/css/custom_styles.css
+++ b/docs/_static/css/custom_styles.css
@@ -887,7 +887,14 @@ img.zoomed-in-image-display {
 .bd-sidebar-primary {
   top: var(--pst-header-height);
 }
-
+.bd-sidebar-primary {
+  max-height: calc(100vh - 65px);
+  overflow: hidden;
+}
+.bd-sidenav {
+  width: 100%;
+  padding-right: 12px;
+}
 @media (max-width: 960px) {
   button.sidebar-toggle.primary-toggle {
     display: flex;
@@ -905,6 +912,10 @@ img.zoomed-in-image-display {
   }
   .bd-sidebar-primary {
     top: 0;
+  }
+  .bd-sidebar-primary {
+    max-height: 100vh;
+    overflow: hidden;
   }
 }
 
